--- a/public_html/css/bootstrap.css
+++ b/public_html/css/bootstrap.css
@@ -49,6 +49,15 @@ a:active,
 a:hover {
   outline: 0;
 }
+.mainlinks {
+  color: rgb(240, 23, 23);
+}
+a:active,
+a:hover {
+  outline: 0;
+}
+
+
 abbr[title] {
   border-bottom: 1px dotted;
 }
@@ -4327,9 +4336,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin: 7.5px -15px;
 }
 .navbar-nav > li > a {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  line-height: 20px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  line-height: 10px;
 }
 @media (max-width: 767px) {
   .navbar-nav .open .dropdown-menu {
@@ -4362,10 +4371,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .navbar-nav > li {
     float: left;
   }
-  .navbar-nav > li > a {
+/*  .navbar-nav > li > a {
     padding-top: 15px;
     padding-bottom: 15px;
   }
+  */
 }
 .navbar-form {
   padding: 10px 15px;
@@ -4511,17 +4521,17 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   color: #777;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #777;
+  color: rgb(247, 7, 7);
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #333;
+  color: rgb(245, 14, 14);
   background-color: transparent;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: #555;
+  color: rgb(241, 11, 11);
   background-color: #e7e7e7;
 }
 .navbar-default .navbar-nav > .disabled > a,
@@ -4607,7 +4617,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #9d9d9d;
 }
 .navbar-inverse .navbar-nav > li > a {
-  color: #9d9d9d;
+  color: #5e5959;
 }
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
