Added longer HR

--- a/public_html/css/business-casual.css
+++ b/public_html/css/business-casual.css
@@ -34,6 +34,10 @@ hr {
     max-width: 400px;
     border-color: #999999;
 }
+.hr-long{
+    max-width: 600px;
+    border-color: #999999;
+}
 
 .brand,
 .address-bar {
