--- a/public_html/css/business-casual.css
+++ b/public_html/css/business-casual.css
@@ -58,6 +58,14 @@ hr {
     min-width: 100%;
 }
 
+.img-center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+  }
+
+
 .brand-before {
     margin: 15px 0;
 }
